force-app/src/objects/c2g__WorkerItem__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpworkeritem</customHelpPage>
    <fields>
        <fullName>c2g__AttemptsRemaining__c</fullName>
        <label>Attempts Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Worker Items</relationshipLabel>
        <relationshipName>WorkerItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__EmailUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Worker Items</relationshipLabel>
        <relationshipName>WorkerItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__WorkAction__c</fullName>
        <label>Work Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Post sales invoice</fullName>
                </value>
                <value>
                    <fullName>Post payable invoice</fullName>
                </value>
                <value>
                    <fullName>Post payable credit note</fullName>
                </value>
                <value>
                    <fullName>Post sales credit note</fullName>
                </value>
                <value>
                    <fullName>Post journal</fullName>
                </value>
                <value>
                    <fullName>Post and match sales credit note</fullName>
                </value>
                <value>
                    <fullName>Create journals</fullName>
                </value>
                <value>
                    <fullName>Create currency adjustment journal if necessary</fullName>
                </value>
                <value>
                    <fullName>Calculate sales tax on invoice</fullName>
                </value>
                <value>
                    <fullName>Calculate sales tax on credit note</fullName>
                </value>
                <value>
                    <fullName>Calculate tax on payable invoice</fullName>
                </value>
                <value>
                    <fullName>Calculate tax on payable credit note</fullName>
                </value>
                <value>
                    <fullName>Commit sales tax on invoice</fullName>
                </value>
                <value>
                    <fullName>Commit sales tax on credit note</fullName>
                </value>
                <value>
                    <fullName>Commit tax on payable invoice</fullName>
                </value>
                <value>
                    <fullName>Commit tax on payable credit note</fullName>
                </value>
                <value>
                    <fullName>Process intercompany transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__WorkReferenceDescription__c</fullName>
        <label>Work Reference Description</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__WorkReference__c</fullName>
        <label>Work Reference</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Worker Item</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>c2g__AttemptsRemaining__c</columns>
        <columns>c2g__WorkReferenceDescription__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FF_Council_of_International_Schools_Inc_WorkerItem</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools, Inc</label>
        <queue>FF_Council_of_International_Schools_Inc</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Council_of_International_Schools_WorkerItem</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools</label>
        <queue>FF_Council_of_International_Schools</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__WorkAction__c</columns>
        <columns>c2g__WorkReference__c</columns>
        <columns>c2g__WorkReferenceDescription__c</columns>
        <columns>c2g__Company__c</columns>
        <columns>c2g__AttemptsRemaining__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Worker Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Worker Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>